# OncoLung60k

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  STEP_BY_STEP_PUSH_GUIDE.md  __init__.py  main.py  pyproject.toml
KimiaNet/: KimiaNet_TestSetManifest.txt
annotation/: callbacks.py  labels.py  parser.py  parsers.py  selector.py  types.py  utils.py  wholeslideannotation.py
buffer/: batchcommander.py  batchproducer.py  context.py  patchcommander.py  patchproducer.py
configs/: lunghist700_modified_convnext.yaml  oncolung_convnext_small.yaml  oncolung_efficientnet_b0.yaml  oncolung_resnet50.yaml  oncolung_vit_base.yaml
configuration/: config.yml
data/: Dataset Link.txt  dataset.py  extensions.py  files.py  mode.py
docker/: docker-compose.yml
docs/: FAQ.md  INSTALL.md  REPRODUCE.md
image/: backend.py  backends.py  spacings.py  utils.py  wholeslideimage.py
iterators/: batchiterator.py  patchiterator.py
models/: Efficiennet B6.py  ResNet152.py  densenet121.py  fusion_model.py
preprocessing/: Patch_Extractor_Dense_Centroids.py  Patch_Extractor_Dense_Centroids_Strong_Labels.py  Patch_Extractor_Dense_Grid.py  Patch_Extractor_Dense_Grid_Strong_Labels.py  utils.py
samplers/: annotationsampler.py  batchreferencesampler.py  batchsampler.py  batchshape.py  callbacks.py  labelsampler.py  patchlabelsampler.py  patchsampler.py  pointsampler.py  sampler.py  samplesampler.py  utils.py
scripts/: download_weights.py  smoke_test.py
splits/: README.md  oncolung60k_5fold_DEMO.csv  oncolung60k_image_folds.csv  oncolung60k_patient_folds.csv
(+60 files in other folders)
